Update aboutHome.html and aboutHome.js
To reflect Winternight-Classic rebranding... It should work this time

--- a/toolkit/content/aboutHome.html
+++ b/toolkit/content/aboutHome.html
@@ -8,8 +8,6 @@
 		<script src="chrome://global/content/aboutHome.js" type="application/x-javascript"></script>
 	</head>
 	<body>
-		<div id="logoContainer">
-			<img src="chrome://global/content/logo.png" id="rzLogo" alt="RetroZilla Logo">
 		</div>
 		<div id="searchContainer">
 			<!-- add input box with a keypress event for the enter key to trigger submit button -->
@@ -17,15 +15,14 @@
               document.getElementById('rzSearchSubmit').click()">
 			<button id="rzSearchSubmit" onClick="rzSearch();">Search</button>
 		</div>
-		<div id="rzFooter">
 			<p id="updateNotifier">
-				<a href="https://github.com/rn10950/retrozilla/releases/latest">
-					New RetroZilla Version Available
+				<a href="https://github.com/ClassicNick/Crescent-Vine/releases/latest">
+					New Winternight-Classic Version Available
 				</a>
 			</p>
 			<p id="rzFooterText">
-				<a href="https://rn10950.github.io/RetroZillaWeb/" class="rzFooterlink">
-					RetroZilla
+				<a href="https://classicnick.github.io/Crescent-Vine/" class="rzFooterlink">
+					Winternight-Classic
 				</a>
 				 - 
 				 Copyright 1998-<span id="currentYear"></span>,
