Force year 2021 to be reported

--- a/toolkit/content/aboutHome.html
+++ b/toolkit/content/aboutHome.html
@@ -25,7 +25,7 @@
 					Winternight-Classic
 				</a>
 				 - 
-				 Copyright 1998-<span id="currentYear"></span>,
+				 Copyright 1998-2021,
 				 <a href="about:credits" class="rzFooterLink">
 					Contributors
 				 </a>
