--- a/xpfe/global/resources/content/aboutChangelog.html
+++ b/xpfe/global/resources/content/aboutChangelog.html
@@ -13,7 +13,22 @@
 		<img src="about:logopng" id="rzLogo">
 		<!--<img src="https://www.mozilla.org/images/logo-star.gif" id="rzLogo">-->
 		<!-- current release -->
-		<h1>RetroZilla 2.2</h1>
+		<h1>RetroZilla 2.3</h1>
+		<h3>New Features</h3>
+		<ul>
+			<li>Updated certificate store</li>
+		</ul>
+		<h3>Bug Fixes</h3>
+		<ul>
+			<li>Website certified by an unknown authority dialog</li>
+		</ul>
+		<h3>Release Notes</h3>
+		<p>
+			This build was released primarily to bring TLS 1.2 support to users as well as fix the annoying
+			root certificate problem.
+		</p>
+		<!-- past releases -->
+		<h2>RetroZilla 2.2</h2>
 		<h3>New Features</h3>
 		<ul>
 			<li>Updated NSS with TLS 1.2 support</li>
@@ -33,7 +48,6 @@
 			This build was released primarily to bring TLS 1.2 support to users as well as fix the annoying
 			root certificate problem.
 		</p>
-		<!-- past releases -->
 		<hr>
 		<h2>RetroZilla 2.1</h2>
 		<h3>New Features</h3>
