--- a/xpfe/global/resources/content/aboutChangelog.html
+++ b/xpfe/global/resources/content/aboutChangelog.html
@@ -17,14 +17,17 @@
 		<h3>New Features</h3>
 		<ul>
 			<li>Updated certificate store</li>
+			<li>Updated NSS with TLS 1.3 support</li>
+			<li>Updated various internal libraries</li>
 		</ul>
 		<h3>Bug Fixes</h3>
 		<ul>
 			<li>Website certified by an unknown authority dialog</li>
+			<li>Gecko build version in user agent string is updated to reflect modern conventions</li>
 		</ul>
 		<h3>Release Notes</h3>
 		<p>
-			This build was released primarily to bring TLS 1.2 support to users as well as fix the annoying
+			This build was released primarily to bring TLS 1.3 support to users as well as fix the annoying
 			root certificate problem.
 		</p>
 		<!-- past releases -->
