--- a/profile/defaults/bookmarks.html
+++ b/profile/defaults/bookmarks.html
@@ -41,4 +41,5 @@ Do Not Edit! -->
 	<!-- Google search via "?" in the urlbar -->
 	<DT><A HREF="http://www.google.com/search?q=%s" ADD_DATE="1507679199" SHORTCUTURL="?" LAST_CHARSET="UTF-8" ID="rdf:#$DfKAE2">Internet Search</A>
 	<!--<DT><A HREF="https://classic.startpage.com//do/search?&query=%s" ADD_DATE="1507685020" SHORTCUTURL="?sp" LAST_CHARSET="UTF-8" ID="rdf:#$PfKAE2">Startpage Web Search</A>-->
+	<DT><A HREF="https://duckduckgo.com/lite/?q=%s" ADD_DATE="1507685020" SHORTCUTURL="?ddg" LAST_CHARSET="UTF-8" ID="rdf:#$PfKAE2">DuckDuckGo Lite Web Search</A>
 </DL><p>
