--- a/xpfe/global/resources/content/aboutChangelog.html
+++ b/xpfe/global/resources/content/aboutChangelog.html
@@ -19,6 +19,7 @@
 			<li>Updated certificate store</li>
 			<li>Updated NSS with TLS 1.3 support</li>
 			<li>Updated various internal libraries</li>
+			<li>Added about:debug page with links and information for RetroZilla developers</li>
 		</ul>
 		<h3>Bug Fixes</h3>
 		<ul>
