--- a/xpfe/global/resources/content/aboutHome.html
+++ b/xpfe/global/resources/content/aboutHome.html
@@ -19,7 +19,7 @@
 		</div>
 		<div id="rzFooter">
 			<p id="updateNotifier">
-				<a href="https://github.com/rn10950/retrozilla/releases/latest">
+				<a href="https://rn10950.github.io/RetroZillaWeb/update.html">
 					New RetroZilla Version Available
 				</a>
 			</p>
