--- a/xpfe/global/resources/content/aboutCredits.html
+++ b/xpfe/global/resources/content/aboutCredits.html
@@ -35,6 +35,7 @@
   <li>The Crash Restore and Session Manager Developers</li>
   <li>Roy Tam (roytam1)</li>
   <li>andreja6</li>
+  <li>LeoKids</li>
 </ul>
 
 <h1>Mozilla Contributors</h1>
