fix installer building for everyone

--- a/xpfe/global/resources/content/aboutChangelog.html
+++ b/xpfe/global/resources/content/aboutChangelog.html
@@ -25,6 +25,7 @@
 		<ul>
 			<li>Website certified by an unknown authority dialog</li>
 			<li>Gecko build version in user agent string is updated to reflect modern conventions</li>
+			<li>Long-standing installer creation bug fixed</li>
 		</ul>
 		<h3>Release Notes</h3>
 		<p>
