--- a/xpfe/global/resources/content/aboutChangelog.html
+++ b/xpfe/global/resources/content/aboutChangelog.html
@@ -20,6 +20,11 @@
 			<li>Updated NSS with TLS 1.3 support</li>
 			<li>Updated various internal libraries</li>
 			<li>Added about:debug page with links and information for RetroZilla developers</li>
+			<li>New Search Engines: DuckDuckGo Lite and Wiby</li>
+			<li>DuckDuckGo Lite set as default search engine</li>
+			<li>ChatZilla has been updated to 0.9.86.1</li>
+			<li>JavaScript: Add array.reduce and array.reduceRight</li>
+			<li>CSS: Add support for alpha colors</li>
 		</ul>
 		<h3>Bug Fixes</h3>
 		<ul>
@@ -29,8 +34,13 @@
 		</ul>
 		<h3>Release Notes</h3>
 		<p>
-			This build was released primarily to bring TLS 1.3 support to users as well as fix the annoying
-			root certificate problem.
+			RetroZilla 2.3 brings together many of the community updates made since the last official 
+			release in 2019.
+		</p>
+		<p>
+			Since 2019, the web has changed a lot. Many websites load entirely using JavaScript (such as
+			Google search results), and therefore may not work in RetroZilla any more. Going forward, 
+			we will make our best attempt to adapt RetroZilla to work with this new reality.
 		</p>
 		<!-- past releases -->
 		<h2>RetroZilla 2.2</h2>
