--- a/xpfe/global/resources/content/aboutDebug.html
+++ b/xpfe/global/resources/content/aboutDebug.html
@@ -13,8 +13,8 @@
 			RetroZilla versions.
 		</p>
 		<ul>
-			<li><a href="https://useragentstring.com/"></a>What is my user agent?</li>
-			<li><a href="https://browserleaks.com/tls"></a>BrowserLeaks SSL/TLS Client Test</li>
+			<li><a href="https://useragentstring.com/">What is my user agent?</a></li>
+			<li><a href="https://browserleaks.com/tls">BrowserLeaks SSL/TLS Client Test</a></li>
 			<li><a href="https://www.acidtests.org/">Acid Tests</a></li>
 		</ul>
 	</body>
