--- a/toolkit/content/aboutCredits.html
+++ b/toolkit/content/aboutCredits.html
@@ -32,8 +32,10 @@
 <ul>
   <li>rn10950</li>
   <li>Nathan Lineback</li>
+  <li>The Crash Restore and Session Manager Developers</li>
   <li>Roy Tam (roytam1)</li>
   <li>andreja6</li>
+  <li>LeoKids</li>
 </ul>
 
 <h1>Mozilla Contributors</h1>
@@ -2580,4 +2582,4 @@ Leszek Życzkowski,
 Valeria Zysman
 </p>
 
-</body></html>
+</body></html>                   tml>
